# VocabSultan

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  core.py  pyproject.toml  requirements.txt  utils.py  vocab_sultan_cli.py
